scenario4/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: nginx:1.21
        name: server
        resources:
          limits:
            cpu: 500m
            memory: 500M
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - image: ibmcom/curl:4.0.0
        name: client
        command: ["/bin/sh"]
        args: ["-c", "while true; do sleep 10;done"]
        resources:
          limits:
            cpu: 500m
            memory: 500M
